[gd_scene load_steps=13 format=2]

[ext_resource path="res://img/ground.png" type="Texture" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://img/coin.png" type="Texture" id=3]
[ext_resource path="res://scripts/soundFx.gd" type="Script" id=4]
[ext_resource path="res://img/sky.png" type="Texture" id=5]
[ext_resource path="res://img/key.png" type="Texture" id=6]
[ext_resource path="res://scoreFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://helpFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://img/bank.png" type="Texture" id=9]
[ext_resource path="res://img/hint.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Commissioner-SemiBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
font_data = SubResource( 1 )

[node name="Main" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="gameBox" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 1080.0
rect_clip_content = true
color = Color( 0, 0.443137, 0.466667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="back" type="TextureRect" parent="gameBox"]
margin_right = 1440.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="gameBox"]
z_index = 50
__meta__ = {
"_edit_lock_": true
}

[node name="ground" type="TextureRect" parent="gameBox/Node2D"]
margin_top = 860.0
margin_right = 1440.0
margin_bottom = 1102.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="gameBox"]

[node name="Control" type="Control" parent="gameBox/UI"]
margin_right = 1440.0
margin_bottom = 1080.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="coins" type="Label" parent="gameBox/UI/Control"]
margin_left = 80.0
margin_top = 30.0
margin_right = 320.0
margin_bottom = 105.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 8 )
text = "0"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="help" type="Label" parent="gameBox/UI/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -917.0
margin_top = 30.0
margin_right = -117.0
margin_bottom = 105.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 8 )
text = "HELP TEXT / hint"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="debug" type="Label" parent="gameBox/UI/Control"]
margin_left = 30.0
margin_top = 218.0
margin_right = 363.0
margin_bottom = 430.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "FPS: 30
DT: 0.033333
DRAW_CALLS: 22
NODE_COUNT: 9
TIME_PROCESS: 2.167"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="keysTotal" type="TextureRect" parent="gameBox/UI/Control"]
self_modulate = Color( 0, 0, 0, 0.588235 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_top = 120.0
margin_right = 144.0
margin_bottom = 248.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="keysPicked" type="TextureRect" parent="gameBox/UI/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -162.0
margin_top = 120.0
margin_right = 82.0
margin_bottom = 248.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="coin" type="TextureRect" parent="gameBox/UI/Control"]
margin_left = 14.0
margin_top = 40.0
margin_right = 138.0
margin_bottom = 168.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bank" type="TextureRect" parent="gameBox/UI/Control"]
margin_left = 14.0
margin_top = 120.0
margin_right = 138.0
margin_bottom = 248.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hint" type="TextureRect" parent="gameBox/UI/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -98.0
margin_top = 39.0
margin_right = 26.0
margin_bottom = 167.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="money" type="Label" parent="gameBox/UI/Control"]
margin_left = 80.0
margin_top = 110.0
margin_right = 320.0
margin_bottom = 185.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 7 )
text = "0"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="soundFx" type="AudioStreamPlayer" parent="."]
bus = "soundFx"
script = ExtResource( 4 )

[node name="soundSteps" type="AudioStreamPlayer" parent="."]

[node name="soundBg" type="AudioStreamPlayer" parent="."]
